fixed content misaligned after new class

--- a/src/styles/home/ContentCircle.module.css
+++ b/src/styles/home/ContentCircle.module.css
@@ -22,10 +22,15 @@ body {
 }
 
 .innerContent {
+  padding: 3rem 0;
+}
+
+.headerTitle {
+  text-align: center;
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 3rem 0;
+  flex-direction: column;
 }
 
 .textContent {
@@ -41,6 +46,7 @@ body {
   font-size: 2.25rem;
   margin-bottom: 5rem;
   margin-top: 0.5rem;
+  /* border: 1px solid red; */
 }
 
 .undertitleContent {
@@ -48,6 +54,7 @@ body {
   font-weight: 600;
   margin-bottom: 1rem;
   color: var(--nav-color);
+  /* border: 1px solid red; */
 }
 
 .paragraphContent {
@@ -181,7 +188,6 @@ body {
   }
 
   .innerContent {
-    flex-direction: column;
     width: 50%;
   }
 
